# alpamayo_local_test

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
calibration/: Front_camera_distortion.txt  Front_camera_extrinsics.txt  Front_camera_intrinsic.txt  Front_camera_original_intrinsic.txt
notebooks/: clip_ids.parquet  inference.ipynb  inference_cam_num.ipynb  inference_nav.ipynb  inference_offline_local.ipynb  inference_offline_local_axis_debug.ipynb  inference_offline_local_navigation.ipynb  inference_offline_local_navigation_late_t0.ipynb  inference_offline_local_navigation_near_intersection_sweep.ipynb  inference_offline_local_navigation_prompt_sweep.ipynb  inference_offline_local_navigation_right_turn_debug.ipynb  inference_offline_local_sliding.ipynb  inference_offline_local_sliding_cached.ipynb  inference_offline_local_sliding_fast.ipynb  inference_offline_sliding_live.ipynb  inference_vqa.ipynb  nav_demo_samples.json  projection_front_camera.ipynb  projection_front_camera_final.ipynb
scripts/: extract_offline_video_frames.py
scripts/inference_config/: inference_config_projection_front_camera_final.yaml  projection_front_camera_final.yaml
src/alpamayo1_5/: config.py  helper.py  inference_offline_local_sliding_live.py  load_offline_dataset.py  load_physical_aiavdataset.py  nav_utils.py  offline_eval_utils.py  test_inference.py  test_inference_8bit.py  test_inference_8bit_sliding.py  viz_utils.py
src/alpamayo1_5/action_space/: __init__.py  action_space.py  discrete_action_space.py  unicycle_accel_curvature.py  utils.py
(+8 files in other folders)
